--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,13 @@ html, body {
   text-shadow: 1px 1px 15px #000;
 }
 
+.thumbnail {
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
+  width: 150px; /* Set a small width */
+}
+
 #text {
   text-align: center;
 }
